--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,7 +12,7 @@ on:
   
 jobs:
   Build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-lates
     steps:
       - run: |
           echo "🎉 The job was triggered by event: ${{ github.event_name }}"
